--- a/WebContent/ITMILL/themes/default/window/window.css
+++ b/WebContent/ITMILL/themes/default/window/window.css
@@ -63,6 +63,16 @@
 	line-height: 18px;
 }
 
+/* Partial fix for bug #1106 */
+/* Target Firefox 2 (somehow this will force almost all window borders on top of a flash object) */
+.i-window-contents, x:-moz-any-link {
+	overflow: hidden;
+}
+/* Target Firefox 3 (it doesn't need any trickery) */
+.i-window-contents, x:-moz-any-link, x:default {
+	overflow: visible;
+}
+
 .i-window-footer {
 	height: 0;
 	font-size: 0px;
