implemented simple system to ensure css is loaded. This fixes several major rendering issues especially in FF, that only came up with some cache state/settings and with a network latency. One existing ticket fixed: #2081.
svn changeset:5430 branch:trunk

--- a/WebContent/ITMILL/themes/default/common/common.css
+++ b/WebContent/ITMILL/themes/default/common/common.css
@@ -197,7 +197,10 @@ input.i-modified,
 	padding-bottom: 1px;
 }
 
-/* Loading indicator states */
+/* Loading indicator states
+ * Note: client side expects that loading indicator has a height. It depends on
+ * this css property to ensure browsers have applied all required styles.
+ */
 
 .i-loading-indicator,
 .i-loading-indicator-delay,
