--- a/WebContent/ITMILL/themes/default/accordion/accordion.css
+++ b/WebContent/ITMILL/themes/default/accordion/accordion.css
@@ -25,6 +25,7 @@
 	border-top-color: #cbd7de;
 	border-bottom-color: #bfc9d4;
 	text-shadow: #fafafa 1px 1px 0;
+	border-bottom: 1px solid #c8cccd;
 }
 
 .i-accordion-item-open .i-accordion-item-caption .i-caption {
@@ -32,5 +33,4 @@
 }
 
 .i-accordion-item-content {
-	border-top: 1px solid #c8cccd;
 }
