Fixes #2113 : PopupView should indicate clickability with hand-cursor
svn changeset:5503 branch:trunk

--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -1025,6 +1025,11 @@ input.i-modified,
 	padding:				3px;
 	margin:					3px;
 }
+
+.i-popupview {
+	cursor: 				pointer; 
+	cursor: 				hand;
+}
 .i-progressindicator {
 	background: #dfe2e4 url(progressindicator/img/base.gif);
 	height: 9px;
