simple css print instructions, to bypass our overflow hacks during print process
svn changeset:5561 branch:trunk

--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -156,6 +156,28 @@
 	border-top:1px solid transparent;
 }
 
+
+/**
+ * Try to cope printing somehow. Reasonable printing support 
+ * needs application specific planning and CSS tuning.
+ */
+@media print {
+	.i-generated-body {
+		height: auto;
+		min-height: 20cm;
+		overflow: visible;
+	}
+	.i-app {
+		height:auto;
+		min-height: 20cm;
+	}
+	
+	.i-view {
+		overflow: visible;
+	}
+	
+}
+
 .i-view:active, .i-view:focus { 
 	outline: none;
 }
