--- a/WebContent/ITMILL/themes/default/orderedlayout/orderedlayout.css
+++ b/WebContent/ITMILL/themes/default/orderedlayout/orderedlayout.css
@@ -19,10 +19,9 @@
 }
 
 /* Placing error indicator right after the widget with empty caption */
-.i-orderedlayout-c * { float:left; display: block;}
+.i-orderedlayout-c * { float:left;}
 .i-orderedlayout-w-e { float:left;}
 * html .i-orderedlayout-c, * html .i-orderedlayout-w { height: 1%; }
-.i-orderedlayout-w { display: block; }
 .i-orderedlayout-c { float:left; display: block;}
 .i-orderedlayout-w:after, .i-orderedlayout-c:after  {
   	content: ".";
