--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -162,11 +162,13 @@
  * needs application specific planning and CSS tuning.
  */
 @media print {
+	
 	.i-generated-body {
 		height: auto;
 		min-height: 20cm;
 		overflow: visible;
 	}
+
 	.i-app {
 		height:auto;
 		min-height: 20cm;
@@ -881,10 +883,9 @@ input.i-modified,
 }
 
 /* Placing error indicator right after the widget with empty caption */
-.i-orderedlayout-c * { float:left; display: block;}
+.i-orderedlayout-c * { float:left;}
 .i-orderedlayout-w-e { float:left;}
 * html .i-orderedlayout-c, * html .i-orderedlayout-w { height: 1%; }
-.i-orderedlayout-w { display: block; }
 .i-orderedlayout-c { float:left; display: block;}
 .i-orderedlayout-w:after, .i-orderedlayout-c:after  {
   	content: ".";
