--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -1675,12 +1675,11 @@ input.i-modified,
 }
 
 .i-table {
-	border: 1px solid #b6bbbc;
 	overflow: hidden;
 	text-align: left /* Force default alignment */
 }
 
-.i-table.table-inline {
+.i-table.table-inline .i-table-header-wrap {
 	border-left: none;
 	border-right: none;
 	/*margin: -16px -18px 0 -18px;*/
@@ -1689,7 +1688,7 @@ input.i-modified,
 .i-table-header-wrap {
 	height: 36px;
 	background: #e7edf3 url(table/img/header-bg.png) repeat-x;
-	border-bottom: 1px solid #b6bbbc;
+	border: 1px solid #b6bbbc;
 	overflow: hidden;
 }
 
@@ -1749,6 +1748,8 @@ input.i-modified,
 
 .i-table-body {
 	background: #fff;
+	border: 1px solid #b6bbbc;
+	border-top: none;
 }
 
 .i-table-row-spacer {
