--- a/WebContent/ITMILL/themes/example/styles.css
+++ b/WebContent/ITMILL/themes/example/styles.css
@@ -10,9 +10,13 @@
  * For FormExample.java
  ******************************************************************************/
 .i-form {
-	border: 1px solid;
-	margin: 10px;
-	padding: 5px;
+	border: 1px solid #dadcdf;
+	margin: 8px;
+	padding: 15px;
+}
+
+.i-form legend {
+	color: #464f52;
 }
 
 .i-orderedlayout-formroot td {
