--- a/WebContent/ITMILL/themes/default/common/common.css
+++ b/WebContent/ITMILL/themes/default/common/common.css
@@ -7,6 +7,7 @@
 	margin:0;
 	overflow:hidden;
 }
+
 .i-app {
 	background: #e9eced;
 	font-family: "Trebuchet MS", geneva, helvetica, arial, tahoma, verdana, sans-serif;
@@ -14,6 +15,12 @@
 	font-size: 13px;
 	line-height: 18px;
 	height: 100%;
+}
+
+.i-app-loading {
+	background-image: url(img/loading-indicator.gif);
+	background-repeat: no-repeat;
+	background-position: 50%;
 }
 
 .i-view {
