Test case for Matti.
svn changeset:5599 branch:trunk

--- a/WebContent/ITMILL/themes/tests-tickets/styles.css
+++ b/WebContent/ITMILL/themes/tests-tickets/styles.css
@@ -155,3 +155,16 @@
 	padding-top: 40px;
 }
 
+
+
+
+
+
+/*****************************************************************************/
+/* No ticket, just for general test cases                                    */
+/*****************************************************************************/
+
+.i-label-no-padding {
+	padding: 0;
+	background: lime;
+}
