--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -412,15 +412,19 @@ input.i-modified,
 	margin-bottom: 0px;
 	margin-left: 0px;
 }
+.i-datefield-textfield {
+	vertical-align: top;
+}
+
 .i-datefield-button {
 	font-size:13px;
 	width: 22px;
-	height: 25px;
+	height: 24px;
 	padding: 0;
 	overflow: hidden;
 	border: none;
-	background: transparent url(datefield/img/open-button.png) no-repeat right 1px;
-	text-indent: -90000px;
+	background: transparent url(datefield/img/open-button.png) no-repeat right 0;
+	vertical-align: top;
 }
 
 .i-datefield-popup {
@@ -605,6 +609,17 @@ input.i-modified,
 
 .i-datefield-rendererror .i-textfield {
 	background: #ff9999;
+}
+
+
+
+
+/* IE specific styles */
+
+*+html .i-datefield-button {
+	background-position: right 1px;
+	height: 25px;
+	margin: 0;
 }
 
 /* IE somehow loses generic i-disabled alpha. See #1960 */
