Added pointer cursor for default theme popup-calendar button.
svn changeset:5633 branch:trunk

--- a/WebContent/ITMILL/themes/default/datefield/datefield.css
+++ b/WebContent/ITMILL/themes/default/datefield/datefield.css
@@ -11,6 +11,7 @@
 	border: none;
 	background: transparent url(img/open-button.png) no-repeat right 0;
 	vertical-align: top;
+	cursor: pointer;
 }
 
 .i-datefield-popup {
