--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -425,6 +425,7 @@ input.i-modified,
 	border: none;
 	background: transparent url(datefield/img/open-button.png) no-repeat right 0;
 	vertical-align: top;
+	cursor: pointer;
 }
 
 .i-datefield-popup {
