sampler resources moved
svn changeset:5638 branch:trunk

--- a/WebContent/ITMILL/themes/example/layouts/sampler/featureview.html
+++ b/WebContent/ITMILL/themes/example/layouts/sampler/featureview.html
@@ -1,13 +1,15 @@
 <table width="100%" height="100%" cellpadding="0" cellspacing="0">
 	<tbody>
 		<tr valign="top">
-			<td>
-				<div location="feature-main"></div>
+			<td class="feature-main">
+				<div class="feature-controls" location="feature-controls"></div>
+				<div class="feature-example" location="feature-example"></div>
 			</td>
 			<td width="350px" class="feature-info">
 				<div class="feature-name" location="feature-name"></div>
 				<div class="feature-desc" location="feature-desc"></div>
-				<div class="feature-docs" location="feature-docs"></div>
+				<div class="feature-res" location="feature-res"></div>
+				<div class="feature-api" location="feature-api"></div>
 				<div class="feature-rel" location="feature-rel"></div>
 			</td>
 	</tbody>
